--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,55 @@ margin-top: 15px;
 
 
 /*hero end*/
+/*feature start*/
+.frature{
+
+}
+.p_bottom{
+padding-bottom: 100px;
+
+}
+
+
+.f_item{
+	margin: 45px 0 0;
+	padding: 55px 0 50px;
+background-color: var(--background);
+border-radius: 10px;
+transition: .33s;
+
+}
+.f_img{
+width: 75px;
+height: 80px;
+
+}
+.f_img img{
+
+
+}
+
+.f_h2{
+	margin: 20px 0 0;
+font-weight: 500;
+font-size: 24px;
+color: var(--black);
+}
+
+.f_p{
+
+
+
+}
+.f_item:hover{
+	background-color: white;
+box-shadow: 0px 20px 40px 0px #0000001A;
+
+
+}
+
+
+/*feature end*/
+
+
+
