--- a/css/media.css
+++ b/css/media.css
@@ -51,6 +51,17 @@ padding: 0 0 30px;
 
 }
 
+/* feature */
+
+.f_item{
+	margin: 30px 0 0;
+}
+.p_bottom{
+	padding-bottom: 60px;
+}
+.f_h2{
+	font-size: 21px;
+}
 
 
 
@@ -108,6 +119,17 @@ padding: 0 50px 30px;
 }
 
 
+/* feature */
+
+.f_item{
+	margin: 30px 0 0;
+}
+.p_bottom{
+	padding-bottom: 60px;
+}
+
+
+
 
 
 
@@ -155,6 +177,14 @@ line-height: 30px;
 .b_img{
 padding: 0 50px 30px;
 
+}
+/* feature */
+
+.f_item{
+	margin: 40px 0 0;
+}
+.p_bottom{
+	padding-bottom: 80px;
 }
 
 
